--- a/zelty.css
+++ b/zelty.css
@@ -1,7 +1,5 @@
-#zwgth h1 {
-    color:red;
-}
-
 body {
     background-color: var( --e-global-color-67b9d97 );
+    height: 100%;
+    padding: 0 6rem;
 }
