--- a/zelty.css
+++ b/zelty.css
@@ -3,3 +3,9 @@ body {
     height: 100%;
     padding: 4rem 0;
 }
+
+#zwgth h1 {
+    padding-top: 0;
+    font-family: font-family: var( --e-global-typography-ede6ba9-font-family ), Sans-serif;
+    color: var( --e-global-color-e6494a7 );
+}
