--- a/zelty.css
+++ b/zelty.css
@@ -1,5 +1,5 @@
 body {
-    background-color: var( --e-global-color-67b9d97 );
+    background-color: #fffbf5;
     height: 100%;
     padding: 4rem 0;
 }
@@ -7,7 +7,7 @@ body {
 #zwgth h1 {
     padding-top: 0;
     font-family: var( --e-global-typography-ede6ba9-font-family ), Sans-serif;
-    color: var( --e-global-color-e6494a7 );
+    color: #e30813;
 }
 
 .container-fluid {
