--- a/zelty.css
+++ b/zelty.css
@@ -21,6 +21,6 @@ body {
 
 #zwgth h1 {
     padding-top: 0;
-    font-family: "druk", Sans-serif;
+    font-family: 'druk', Sans-serif;
     color: #e30813;
 }
