--- a/zelty.css
+++ b/zelty.css
@@ -14,7 +14,7 @@
 } */
 
 @font-face {
-    font-family: 'matrice';
+    font-family: 'druk';
     src: url('https://v2.gruppomimo.com/wp-content/uploads/2021/08/Druk-WideMedium.woff2') format('woff2'), url('https://v2.gruppomimo.com/wp-content/uploads/2021/08/Druk-WideMedium.woff') format('woff');
     font-style: normal;
 }
